--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body style="background-color: #303030;">
     <nav>
-      <div class="nav-wrapper" style="background-color: #e91e63;">
+  <body style="background-color: #dbdff0">
+    <div class="nav-wrapper" style="background-color: #3f51b5;">
         <a href="#!" class="brand-logo ">Logo</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
@@ -185,7 +185,7 @@
               </div>
             </div>  
 
-      <footer class="page-footer">
+      <footer class="page-footer" style="background-color: #3f51b5;">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
