agregar imagenes y titulos de card

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="mobile.html">Mobile</a></li>
    
       </ul>
-
+<!--
       <div class="carousel carousel-slider center">
         <div class="carousel-fixed-item center">
           <a class="btn waves-effect white grey-text darken-text-2">button</a>
@@ -53,7 +53,7 @@
           <p class="white-text">This is your fourth panel</p>
         </div>
       </div>
-      
+    -->  
       <!--
       <div class="section white">
         <div class="row container">
@@ -75,7 +75,7 @@
             <div class="card">
               <div class="card-image">
                 <img   class="altura" src="images/ECOGRAFIA.jpg">
-                <span class="card-title">Card Title</span>
+                <span class="card-title">Ecografia</span>
                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
               </div>
               <div class="card-content">
@@ -86,8 +86,8 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img class="altura" src="images/2 MES.jpg">
-                <span class="card-title">Card Title</span>
+                <img class="altura" src="images/1 MES.jpg">
+                <span class="card-title">1° Mes</span>
                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
               </div>
               <div class="card-content">
@@ -98,8 +98,8 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img  class="altura"src="images/3 MES.jpg">
-                <span class="card-title">Card Title</span>
+                <img  class="altura"src="images/2 MES.jpg">
+                <span class="card-title">2° Mes</span>
                 <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
               </div>
               <div class="card-content">
@@ -112,8 +112,20 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img  class="altura"src="images/4 MES.jpg">
-                  <span class="card-title">Card Title</span>
+                  <img  class="altura"src="images/3 MES.jpg">
+                  <span class="card-title">3° Mes</span>
+                  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                </div>
+                <div class="card-content">
+                  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m4">
+              <div class="card">
+                <div class="card-image">
+                  <img class="altura"src="images/4 MES.jpg">
+                  <span class="card-title">4° Mes</span>
                   <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                 </div>
                 <div class="card-content">
@@ -125,19 +137,7 @@
               <div class="card">
                 <div class="card-image">
                   <img class="altura"src="images/5 MES.jpg">
-                  <span class="card-title">Card Title</span>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                </div>
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col s12 m4">
-              <div class="card">
-                <div class="card-image">
-                  <img class="altura"src="images/6 MES.jpg">
-                  <span class="card-title">Card Title</span>
+                  <span class="card-title">5° Mes</span>
                   <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                 </div>
                 <div class="card-content">
@@ -150,8 +150,20 @@
               <div class="col s12 m4">
                 <div class="card">
                   <div class="card-image">
+                    <img class="altura"src="images/6 MES.jpg">
+                    <span class="card-title">6° Mes</span>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col s12 m4">
+                <div class="card">
+                  <div class="card-image">
                     <img class="altura"src="images/7 MES.jpg">
-                    <span class="card-title">Card Title</span>
+                    <span class="card-title">7° Mes</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
@@ -163,7 +175,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img class="altura"src="images/8 MES.jpg">
-                    <span class="card-title">Card Title</span>
+                    <span class="card-title">8° Mes</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
@@ -171,19 +183,47 @@
                   </div>
                 </div>
               </div>
-              <div class="col s12 m4">
-                <div class="card">
-                  <div class="card-image">
-                    <img class="altura"src="images/9 MES.jpg">
-                    <span class="card-title">Card Title</span>
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                  </div>
-                  <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              <div class="row">
+                <div class="col s12 m4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img class="altura"src="images/9 MES.jpg">
+                      <span class="card-title">9° Mes</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
+                <div class="col s12 m4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img class="altura"src="images/10 MES.jpg">
+                      <span class="card-title">10° Mes</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 m4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img class="altura"src="images/11 MES.jpg">
+                      <span class="card-title">11° Mes</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                  </div>
+                </div>
+            
             </div>  
+
+
 
       <footer class="page-footer" style="background-color: #3f51b5;">
         <div class="container">
